# homebrew-besign

./: AUTHORS.md  CMakeLists.txt  LICENSE.txt  README.md  Toolchain-mingw.cmake  read.txt
Formula/: besign.rb  corebesign.rb
besign_helper/: README.md  besign_helper.pyx  setup.py
cmake/: FindMuPDF.cmake
header/: add_ocsp_dict.h  add_ocsp_trailer.h  add_placeholder.h  add_seal_dict.h  add_signature_dict.h  add_trailer.h  addons.h  calculate_hash.h  check_signature.h  cms.h  detached_cms.h  find_all_string_position.h  find_char_position.h  find_string_position.h  get_added_index.h  get_ocsp_response.h  get_page_reference.h  get_pdf_component.h  open_file.h  place_signature.h  save_pdf.h  sign.h  sign_bsre.h  sign_with_p12.h  visualization.h  visualization_xxx.h
input/: usertesting.p12
src/: add_ocsp_dict.cpp  add_ocsp_trailer.cpp  add_placeholder.cpp  add_seal_dict.cpp  add_signature_dict.cpp  add_signature_dict_xxx.cpp  add_signature_dict_yyy.cpp  add_trailer.cpp  addons.cpp  besign_helper.c  besign_helper.cpp  besign_helper.pyx  calculate_hash.cpp  check_signature.cpp  cms.cpp  detached_cms.cpp  find_all_string_position.cpp  find_char_position.cpp  find_string_position.cpp  get_added_index.cpp  get_ocsp_response.cpp  get_page_reference.cpp  get_pdf_component.cpp  helper.c  helper.cpp  helper_xxx.pyx  main.cpp  open_file.cpp  place_signature.cpp  save_pdf.cpp  setup.py  sign.cpp  sign_bsre.cpp  sign_with_p12.cpp  visualization.cpp  visualization_xxx.cpp
test/php/: class.php  index.php
